EMR tools second part

--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -434,26 +434,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Apache Hue</h5>\n",
-    "Hue is an open source SQL Assistant for Databases & Data Warehouses\n",
+    "<h5>Configure Instance Fleets</h5>\n",
+    "The instance fleets configuration for a cluster offers the widest variety of provisioning options for EC2 instances. With instance fleets, you specify target capacities for On-Demand Instances and Spot Instances within each fleet. When the cluster launches, Amazon EMR provisions instances until the targets are fulfilled. You can specify up to five EC2 instance types per fleet for Amazon EMR to use when fulfilling the targets. You can also select multiple subnets for different Availability Zones. When Amazon EMR launches the cluster, it looks across those subnets to find the instances and purchasing options you specify.\n",
     "\n",
-    "<h5>Apache Tez</h5>\n",
-    "The project is aimed at building an application framework which allows for a complex directed-acyclic-graph of tasks for processing data. It is currently built atop Apache Hadoop YARN.\n",
-    "\n",
-    "The 2 main design themes for Tez are:\n",
-    "\n",
-    "    Empowering end users by:\n",
-    "        Expressive dataflow definition APIs\n",
-    "        Flexible Input-Processor-Output runtime model\n",
-    "        Data type agnostic\n",
-    "        Simplifying deployment\n",
-    "    Execution Performance\n",
-    "        Performance gains over Map Reduce\n",
-    "        Optimal resource management\n",
-    "        Plan reconfiguration at runtime\n",
-    "        Dynamic physical data flow decisions\n",
-    "\n",
-    "By allowing projects like Apache Hive and Apache Pig to run a complex DAG of tasks, Tez can be used to process data, that earlier took multiple MR jobs, now in a single Tez job as shown below."
+    "While a cluster is running, if Amazon EC2 reclaims a Spot Instance because of a price increase, or an instance fails, Amazon EMR tries to replace the instance with any of the instance types that you specify. This makes it easier to regain capacity during a spike in Spot pricing. Instance fleets allow you to develop a flexible and elastic resourcing strategy for each node type. For example, within specific fleets, you can have a core of On-Demand capacity supplemented with less-expensive Spot capacity if available, and then switch to On-Demand capacity if Spot isn't available at your price. "
    ]
   },
   {
@@ -478,67 +462,83 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h5>Apache Hue</h5>\n",
+    "Hue is an open source SQL Assistant for Databases & Data Warehouses\n",
+    "\n",
+    "<h5>Apache Tez</h5>\n",
+    "The project is aimed at building an application framework which allows for a complex directed-acyclic-graph of tasks for processing data. It is currently built atop Apache Hadoop YARN.\n",
+    "\n",
+    "The 2 main design themes for Tez are:\n",
+    "\n",
+    "    Empowering end users by:\n",
+    "        Expressive dataflow definition APIs\n",
+    "        Flexible Input-Processor-Output runtime model\n",
+    "        Data type agnostic\n",
+    "        Simplifying deployment\n",
+    "    Execution Performance\n",
+    "        Performance gains over Map Reduce\n",
+    "        Optimal resource management\n",
+    "        Plan reconfiguration at runtime\n",
+    "        Dynamic physical data flow decisions\n",
+    "\n",
+    "By allowing projects like Apache Hive and Apache Pig to run a complex DAG of tasks, Tez can be used to process data, that earlier took multiple MR jobs, now in a single Tez job.\n",
+    "\n",
+    "<h5>Ganglia</h5>\n",
+    "Ganglia is a scalable distributed monitoring system for high-performance computing systems such as clusters and Grids. It is based on a hierarchical design targeted at federations of clusters. It leverages widely used technologies such as XML for data representation, XDR for compact, portable data transport, and RRDtool for data storage and visualization.\n",
+    "\n",
+    "<h5>Apache Sqoop</h5>\n",
+    "Apache Sqoop(TM) is a tool designed for efficiently transferring bulk data between Apache Hadoop and structured datastores such as relational databases.\n",
+    "\n",
+    "<h5>Apache Oozie</h5>\n",
+    "Oozie is a workflow scheduler system to manage Apache Hadoop jobs. Oozie Workflow jobs are Directed Acyclical Graphs (DAGs) of actions. Oozie Coordinator jobs are recurrent Oozie Workflow jobs triggered by time (frequency) and data availability. Oozie is integrated with the rest of the Hadoop stack supporting several types of Hadoop jobs out of the box (such as Java map-reduce, Streaming map-reduce, Pig, Hive, Sqoop and Distcp) as well as system specific jobs (such as Java programs and shell scripts). Oozie is a scalable, reliable and extensible system.\n",
+    "\n",
+    "<h5>Jupyter Notebook</h5>\n",
+    "The Jupyter Notebook is an open-source web application that allows you to create and share documents that contain live code, equations, visualizations and narrative text. Uses include: data cleaning and transformation, numerical simulation, statistical modeling, data manipulation and so on.\n",
+    "\n",
+    "<h5>Presto</h5>\n",
+    "Presto is an open source distributed SQL query engine for running interactive analytic queries against data sources of all sizes ranging from gigabytes to petabytes.\n",
+    "\n",
+    "<h5>Apache Hive</h5>\n",
+    "Apache Hive is for providing data query and analysis which is a data warehouse software project, built on top of Apache Hadoop. Hive gives an SQL-like interface to query data stored in various databases and file systems that integrate with Hadoop. Traditional SQL queries must be implemented in the MapReduce Java API to execute SQL applications and queries over distributed data. Hive provides the necessary SQL abstraction to integrate SQL-like queries (HiveQL) into the underlying Java without the need to implement queries in the low-level Java API.\n",
+    "\n",
+    "<h5>Apache HBase</h5>\n",
+    "Apache HBase is the Hadoop database, a distributed, scalable, big data store.\n",
+    "\n",
+    "<h5>Apache Phoenix</h5>\n",
+    "Apache Phoenix enables OLTP and operational analytics in Hadoop for low latency applications by combining the best of both worlds:\n",
+    "\n",
+    "    the power of standard SQL and JDBC APIs with full ACID transaction capabilities and\n",
+    "    the flexibility of late-bound, schema-on-read capabilities from the NoSQL world by leveraging HBase as its backing store\n",
+    "\n",
+    "Apache Phoenix is fully integrated with other Hadoop products such as Spark, Hive, Pig, Flume, and Map Reduce.\n",
+    "\n",
+    "<h5>Apache Flink</h5>\n",
+    "Apache Flink is a framework and distributed processing engine for stateful computations over unbounded and bounded data streams. Flink has been designed to run in all common cluster environments, perform computations at in-memory speed and at any scale.\n",
+    "\n",
+    "<h5>Apache Zeppelin</h5>\n",
+    "Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more.\n",
+    "\n",
+    "<h5>Apache Livy</h5>\n",
+    "REST on Spark, Livy enables programmatic, fault-tolerant, multi-tenant submission of Spark jobs from web/mobile apps (no Spark client needed). So, multiple users can interact with your Spark cluster concurrently and reliably.\n",
+    "\n",
+    "<h5>Apache Zookeeper</h5>\n",
+    "ZooKeeper is a centralized service for maintaining configuration information, naming, providing distributed synchronization, and providing group services. All of these kinds of services are used in some form or another by distributed applications.\n",
+    "\n",
+    "<h5>Apache Mahout</h5>\n",
+    "For Creating Scalable Performant Machine Learning Applications\n",
+    "\n",
+    "<h5>HCatalog</h5>\n",
+    "HCatalog is a table storage management tool for Hadoop that exposes the tabular data of Hive metastore to other Hadoop applications. It enables users with different data processing tools (Pig, MapReduce) to easily write data onto a grid. HCatalog ensures that users don’t have to worry about where or in what format their data is stored.\n",
+    "\n",
+    "<h5>Apache Pig</h5>\n",
+    "Apache Pig is a platform for analyzing large data sets that consists of a high-level language for expressing data analysis programs, coupled with infrastructure for evaluating these programs. The salient property of Pig programs is that their structure is amenable to substantial parallelization, which in turns enables them to handle very large data sets.\n",
+    "\n",
+    "<h5>Apache Mxnet</h5>\n",
+    "open source deep learning framework suited for flexible research prototyping and production."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -731,55 +731,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
