--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -531,6 +531,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EMR data-encryption-options\n",
+    "https://docs.aws.amazon.com/emr/latest/ManagementGuide/emr-data-encryption-options.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -809,6 +831,36 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AWS Kinesis Data Firehose\n",
+    "https://docs.aws.amazon.com/firehose/latest/dev/encryption.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AWS Athena Data protection\n",
+    "https://docs.aws.amazon.com/athena/latest/ug/encryption.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AWS Glue https://docs.aws.amazon.com/glue/latest/dg/data-protection.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AWS Redshift https://docs.aws.amazon.com/redshift/latest/mgmt/security-data-protection.html"
    ]
   },
   {
