--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -812,25 +812,34 @@
    "metadata": {},
    "source": [
     "There are five different encryption options available to encrypt your S3 objects, as follows:\n",
-    "<ul>\n",
-    "    <li>Server-side encryption with S3 managed keys (SSE-S3)</li>\n",
-    "    <li>Server-side encryption with KMS managed keys (SSE-KMS)</li>\n",
-    "    <li>Server-side encryption with customer-managed keys (SSE-C)</li>\n",
-    "    <li>Client-side encryption with KMS managed keys (CSE-KMS)</li>\n",
-    "    <li>Client-side encryption with customer-managed keys (CSE-C)</li>\n",
-    "</ul>\n",
+    "<style type=\"text/css\">\n",
+    "\ttable.tableizer-table {\n",
+    "\t\tfont-size: 12px;\n",
+    "\t\tborder: 1px solid #CCC; \n",
+    "\t\tfont-family: Arial, Helvetica, sans-serif;\n",
+    "\t} \n",
+    "\t.tableizer-table td {\n",
+    "\t\tpadding: 4px;\n",
+    "\t\tmargin: 3px;\n",
+    "\t\tborder: 1px solid #CCC;\n",
+    "\t}\n",
+    "\t.tableizer-table th {\n",
+    "\t\tbackground-color: #104E8B; \n",
+    "\t\tcolor: #FFF;\n",
+    "\t\tfont-weight: bold;\n",
+    "\t}\n",
+    "</style>\n",
+    "<table class=\"tableizer-table\">\n",
+    "<thead><tr class=\"tableizer-firstrow\"><th>Encryption Option</th><th>Name</th><th>Protocol</th></tr></thead><tbody>\n",
+    " <tr><td>SSE-S3</td><td>Server-side encryption with S3 managed keys</td><td>http/s</td></tr>\n",
+    " <tr><td>SSE-KMS</td><td>Server-side encryption with KMS managed keys</td><td>http/s</td></tr>\n",
+    " <tr><td>SSE-C</td><td>Server-side encryption with customer-managed keys</td><td>only https</td></tr>\n",
+    " <tr><td>CSE-KMS</td><td>Client-side encryption with KMS managed keys</td><td>http/s</td></tr>\n",
+    " <tr><td>CSE-C</td><td>Client-side encryption with customer-managed keys</td><td>http/s</td></tr>\n",
+    "</tbody></table>\n",
     "The difference between server-side and client-side encryption is fairly simple. With serverside encryption, the encryption algorithm and process is run from the server-side—in this\n",
     "instance, within S3. Client-side encryption means that the encryption process is executed on\n",
     "the client first before the data is sent to S3 for storage."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "\n"
    ]
   },
   {
