Security on EMR

--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -811,7 +811,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are five different encryption options available to encrypt your S3 objects, as follows:\n",
+    "There are five different encryption options available to encrypt your S3 objects, as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<style type=\"text/css\">\n",
     "\ttable.tableizer-table {\n",
     "\t\tfont-size: 12px;\n",
@@ -836,7 +842,13 @@
     " <tr><td>SSE-C</td><td>Server-side encryption with customer-managed keys</td><td>only https</td></tr>\n",
     " <tr><td>CSE-KMS</td><td>Client-side encryption with KMS managed keys</td><td>http/s</td></tr>\n",
     " <tr><td>CSE-C</td><td>Client-side encryption with customer-managed keys</td><td>http/s</td></tr>\n",
-    "</tbody></table>\n",
+    "</tbody></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The difference between server-side and client-side encryption is fairly simple. With serverside encryption, the encryption algorithm and process is run from the server-side—in this\n",
     "instance, within S3. Client-side encryption means that the encryption process is executed on\n",
     "the client first before the data is sent to S3 for storage."
@@ -871,6 +883,41 @@
    "source": [
     "AWS Redshift https://docs.aws.amazon.com/redshift/latest/mgmt/security-data-protection.html"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### AWS CloudHMS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"src/KMSvsHMS.png\" width=\"779\" height=\"196\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AWS EMR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://aws.amazon.com/blogs/big-data/best-practices-for-securing-amazon-emr/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
